package com.alex.kotlin.javadesignmode.builder

/**
 * @author Alex
 * @date 2019/4/4 下午1:38
 * @email 18238818283@sina.cn
 * @desc ...
 */
interface Builder {

    fun printFirst(msg : String)

    fun printSecond(msg : String)

}